[package]
name = "ytmdl"
version = "0.0.1"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
iced = { version = "0.10.0", features = ["tokio"] }
id3 = "1.8.0"
itertools = "0.11.0"
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
