[package]
name = "ytmdl"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/Breadinator/ytmdl"

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
itertools = "0.11.0"
rayon = "1.8.0"
once_cell = "1.18.0"
thiserror = "1.0.48"
tempdir = "0.3.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
iced = "0.10.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
scraper = "0.17.1"
id3 = "1.8.0"
dirs = "5.0.1"
url = "2.4.1"
bytes = "1.0"
